fix header padding on mobile

--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -1,7 +1,7 @@
 .header {
   z-index: 10;
   position: relative;
-  padding: 4.6rem 0 0;
+  padding: 4.6rem 2.4rem 0;
   @media (min-width: 768px) {
     padding: 7.2rem 3.9rem 0;
   }
